# AI-Agent

./: README.md
job-agent/: .env.example  .gitignore  README.md  pyproject.toml
job-agent/app/: __init__.py  main.py
job-agent/app/api/: __init__.py  jobs.py  matches.py  resumes.py
job-agent/app/core/: __init__.py  config.py
job-agent/app/models/: __init__.py  candidate.py  job.py  match.py
job-agent/app/prompts/: __init__.py  job_analysis.py  match_analysis.py  resume_analysis.py
job-agent/app/services/: __init__.py  document_parser.py  job_analyzer.py  llm.py  match_analyzer.py  resume_analyzer.py
job-agent/app/static/: app.js  index.html  styles.css
job-agent/tests/: test_candidate_models.py  test_config.py  test_document_parser.py  test_frontend.py  test_health.py  test_job_match_api.py  test_llm.py  test_match_models.py  test_resume_analysis_api.py  test_resume_analyzer.py  test_resume_api.py
test/: 测试岗位描述.txt  测试简历模板.docx  测试简历模板.txt
work/: build_resume_templates.py
