[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
description = "An evidence-based AI agent for resume and job-description analysis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic-settings>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
