[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
description = "一个基于证据分析简历与实习岗位描述匹配度的 AI Agent。"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "pymupdf>=1.25,<2",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic-settings>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
